# yuntu_motor_demo

./: .gitignore  CMakeLists.txt  Ozone_DataSampling_260319.csv  README.md  motor_debugger_gui.py  pytest.ini  yuntu_motor_demo.code-workspace  yuntu_motor_demo.jdebug  yuntu_motor_demo.yct
.scripts/: generate_dbc.py
CMSIS/Core/Include/: cmsis_ccarm.h  cmsis_compiler.h
app/: main.c  motor_control.c  motor_control.h  motor_foc.c  motor_foc.h  motor_hw_ytm32.c  motor_hw_ytm32.h  motor_math.h  motor_param_ident.c  motor_param_ident.h  motor_user_config.h  motor_user_config_fan.h
app/motor/: ARCHITECTURE.md  DEBUG_GUIDE_ZH.md  mc_common.h  mc_control.c  mc_control.h  mc_hal.h  mc_math.c  mc_math.h  mc_motor.c  mc_motor.h  mc_observer.c  mc_observer.h  mc_protection.c  mc_protection.h  mc_startup.c  mc_startup.h  mc_svpwm.c  mc_svpwm.h  mc_user_params.c  mc_user_params.h  motor_app.c  motor_app.h
app/motor/ytm32/: mc_hal_ytm32.c  mc_hal_ytm32.h
app/motor_profiles/: motor_profile_fan.h  motor_profile_seat.h
board/: RamInit0.S  RamInit1.c  RamInit2.c  acmp_config.c  acmp_config.h  adc_config.c  adc_config.h  can_config.c  can_config.h  clock_config.c  clock_config.h  dma_config.c  dma_config.h  etmr_config.c  etmr_config.h  flash_config.c  flash_config.h  i2c_config.c  i2c_config.h  interrupt_config.c  interrupt_config.h  linflexd_uart_config.c  linflexd_uart_config.h  lptmr_config.c  lptmr_config.h  pin_mux.c  pin_mux.h  ptmr_config.c  ptmr_config.h  sdk_project_config.h  spi_config.c  spi_config.h  startup.S  tmu_config.c  tmu_config.h  vector.S  vector_table_copy.c  wdg_config.c  wdg_config.h  yt_linker.ld
cmake/: armac5.cmake  armac6.cmake  config.cmake  configCore.cmake  configLib.cmake  gcc.cmake  ghs.cmake  iccarm.cmake
cmake/Toolchain/: AC5.cmake  AC6.cmake  GCC.cmake  GHS.cmake  ICCARM.cmake  Tools.cmake
cmake/targets/: GENERATED_CONFIG_TARGET.cmake  GENERATED_SDK_TARGET.cmake
docs/: motor_control.dbc  ytm32_sensorless_foc_debug_cn.md  ytm32_sensorless_foc_plan.md
motor_test/: README.md  anomaly_analyzer.py  auto_tuner.py  can_interface.py  conftest.py  motor_client.py  report_generator.py  requirements.txt  test_logger.py  waveform_capture.py
motor_test/motor_profiles/: __init__.py  fan.yaml  seat.yaml
motor_test/test_cases/: test_tc001_start_stop.py  test_tc002_speed_response.py  test_tc003_direction_switch.py  test_tc004_protection.py  test_tc005_startup_reliability.py  test_tc006_wind_detect.py  test_tc007_field_weakening.py  test_tc008_speed_pi_tune.py  test_tc009_observer_tune.py  test_tc010_endurance.py  test_tc011_current_loop_tune.py  test_tc012_hfi_ipd.py
motor_test/test_reports/: test_report_20260327_182315.md  test_report_20260327_182820.md  test_report_20260327_182906.html  test_report_20260327_182906.md  test_report_20260327_183227.md  test_results_20260327_182315.json  test_results_20260327_182820.json  test_results_20260327_182906.json  test_results_20260327_183228.json
platform/devices/: callbacks.h  devassert.h  device_registers.h  floats.h  status.h
platform/devices/YTM32B1ME0/include/: YTM32B1ME0.h  YTM32B1ME0_features.h
platform/devices/YTM32B1ME0/startup/: system_YTM32B1ME0.c  system_YTM32B1ME0.h
platform/devices/common/: core_common.h
platform/drivers/inc/: acmp_driver.h  adc_driver.h  clock.h  clock_manager.h  dma_driver.h  flash_driver.h  flexcan_driver.h  i2c_driver.h  interrupt_manager.h  linflexd_lin_driver.h  linflexd_uart_driver.h  lptmr_driver.h  pins_driver.h  ptmr_driver.h  spi_master_driver.h  spi_shared_function.h  spi_slave_driver.h  tmu_driver.h  wdg_driver.h
platform/drivers/inc/etmr/: etmr_common.h
platform/drivers/src/acmp/: acmp_driver.c  acmp_hw_access.c  acmp_hw_access.h
platform/drivers/src/adc/: adc_driver.c  adc_hw_access.h
platform/drivers/src/dma/: dma_driver.c  dma_hw_access.c  dma_hw_access.h  dma_irq.c  dma_irq.h
platform/drivers/src/etmr/: etmr_common.c  etmr_hw_access.c  etmr_hw_access.h
platform/drivers/src/flash/: flash_driver.c  flash_hw_access.h
platform/drivers/src/flexcan/: flexcan_driver.c  flexcan_hw_access.c  flexcan_hw_access.h  flexcan_irq.c  flexcan_irq.h
platform/drivers/src/i2c/: i2c_driver.c  i2c_hw_access.h  i2c_irq.c  i2c_irq.h
platform/drivers/src/interrupt/: interrupt_manager.c
platform/drivers/src/linflexd/: linflexd_hw_access.h  linflexd_uart_driver.c  linflexd_uart_irq.c  linflexd_uart_irq.h
platform/drivers/src/lptmr/: lptmr_driver.c  lptmr_hw_access.c  lptmr_hw_access.h
platform/drivers/src/pins/: pins_driver.c  pins_gpio_hw_access.h  pins_port_hw_access.c  pins_port_hw_access.h
rtos/osif/: osif.h  osif_baremetal.c
(+33 files in other folders)
